# hMC

./: HEPMonteCarlo.cabal  LICENSE  hMC.cabal  versioncheck.hs
src/HEP/MonteCarlo/: Plain.hs  Vegas.hs
src/Numeric/MonteCarlo/: Plain.hs  VEGAS.hs
